<resources>
    <string name="app_name">projectv4</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Count</string>
    <string name="weight">weight</string>
    <string name="count" >Count</string>
    <string name="str1">Count Your BMI</string>
    <string name="height">Height(m):</string>
    <string name="str2">Weight(kg):</string>
    <string name="str3">Male/Female</string>
    <string name="male">Male</string>
    <string name="Female">Felmale</string>
    <string name="str4">count BMI</string>
    <string name="gym">GYM</string>
    <string name="eattoday">Eat Today</string>
    <string name="breakfirst">BreakFirst:</string>
    <string name="lunch">Lunch:</string>
    <string name="dinner">Dinner:</string>
    <string name="addfinish">addfinish</string>
    <string name="cal">(cal)</string>
    <string name="nameset">Name: ChanHT</string>
    <string name="goal">Goal:</string>
    <string name="account">Account:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mymood">Mymood</string>
    <string-array name="moodarray">
        <item>Happy</item>
        <item>angry</item>
    </string-array>
</resources>
