<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/inputaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />
</LinearLayout>